# cordon

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  STANDARDS.md  biome.json  build_cordon.py  docker-compose.yml  package-lock.json  package.json  server.json  tsconfig.base.json  turbo.json
.claude/: settings.local.json
.github/workflows/: ci.yml  publish-cli.yml  publish-core.yml  publish-sdk.yml  release.yml
cordon_gateway/: .dockerignore  .env.example  ARCHITECTURE.md  Makefile  README.md  alerting.py  auth.py  cordon_sdk.py  dashboard.py  db.py  docker-compose.prod.yml  docker-compose.yml  main.py  pii.py  policy.rego  policy.yaml  ratelimit.py  requirements.txt
cordon_gateway/docs/: compliance.md  helm.md  policy.md  sdk.md
cordon_gateway/helm/cordon/: Chart.yaml  README.md  artifacthub-repo.yml  values.yaml
cordon_gateway/sdk_package/: README.md  pyproject.toml
cordon_gateway/sdk_package/src/cordon_sdk/: __init__.py  client.py
cordon_gateway/tests/: conftest.py  test_alerting.py  test_auth.py  test_dashboard.py  test_export.py  test_gateway.py  test_opa.py  test_pii.py  test_ratelimit.py  test_sdk.py
docs/: CNAME  index.html
examples/security-showcase/: README.md  agent-sim.ts  block-test.ts  cordon.config.ts  dangerous-server.ts  package.json
helm/cordon/: README.md  artifacthub-repo.yml  values.yaml
helm/cordon/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
(+2 files in other folders)
