[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cordon-sdk"
version = "0.1.0"
description = "Python client for the Cordon MCP Security Gateway"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "security", "gateway", "ai", "llm", "policy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_ORG/cordon"
Documentation = "https://github.com/YOUR_ORG/cordon/blob/main/cordon_gateway/docs/sdk.md"
Repository = "https://github.com/YOUR_ORG/cordon"
"Bug Tracker" = "https://github.com/YOUR_ORG/cordon/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cordon_sdk"]
